# nextnucleus

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO
assets/: archetypes.csv  data.csv  fibonacci.lua  script.nu  test.lua  test.nu
docs/: rom.md
examples/basic/: CMakeLists.txt  main.c  mysystem.c  mysystem.h  nostdlib.c
nucleus/: allocator.h  api.h  bitset.h  cartridge.h  compiler.h  ecs.h  engine.h  error.h  lang.h  list.h  lua.h  macro.h  math.h  memory.h  nucleus.h  platform.h  property.h  renderer.h  rom.h  slotmap.h  string.h  system.h  table.h  types.h  vm.h
nucleus/compiler/: allocator.h  error.h  lexer.h  parser.h  token.h
nucleus/ecs/: api.h  archetype.h  component.h  entity.h  group.h  stage.h  system.h
nucleus/lang/: allocator.h  analyzer.h  ast.h  builtin.h  codegen.h  compiler.h  error.h  lexer.h  mir.h  parser.h  print.h  report.h  symbol.h  token.h
nucleus/lang/analyzer/: archetype.h  symbol.h  type.h
nucleus/vm/: allocator.h  api.h  cartridge.h  error.h  interpreter.h  list.h  math.h  memory.h  platform.h  property.h  renderer.h  resource.h  slotmap.h  string.h  table.h  types.h
tests/: CMakeLists.txt  ident.c  lexer.c  list.c  memory.c  mmap.c  parser.c  slotmap.c  string.c
tools/: patch_compile_commands.sh
